--- a/src/java/src/main/resources/application.properties
+++ b/src/java/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/project_dbb?useSSL=false&serverTimezone=UTC
 spring.datasource.name=root
-spring.datasource.password=Gleb02092002
+spring.datasource.password=*******
 spring.jpa.hibernate.ddl-auto=update
